# ModulBankIntegration

./: .dockerignore  Dockerfile  README.md  api_module_bank.py  api_schema.py  docker-compose.yml  manage.py  pyproject.toml
ModulBankIntegration/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
modul_bank/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
modul_bank/migrations/: 0001_initial.py
